--- a/.github/workflows/maven-smoke-test.yml
+++ b/.github/workflows/maven-smoke-test.yml
@@ -1,4 +1,4 @@
-name: Maven extension smoke test
+name: Maven smoke test
 
 on: [push]
 
@@ -13,18 +13,18 @@ jobs:
         strategy:
             matrix:
                 include:
-                    - project-basedir: common-gradle-enterprise-maven-configuration
-                      relative-path-to-sample-build-file: "default"
-                    - project-basedir: common-custom-user-data-maven-extension
-                      relative-path-to-sample-build-file: "default"
-                    - project-basedir: common-custom-user-data-maven-extension
-                      relative-path-to-sample-build-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
-                    - project-basedir: common-custom-user-data-maven-extension
-                      relative-path-to-sample-build-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
-                    - project-basedir: common-custom-user-data-maven-extension
-                      relative-path-to-sample-build-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
-                    - project-basedir: common-custom-user-data-maven-extension
-                      relative-path-to-sample-build-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
+                    - build-dir: "common-gradle-enterprise-maven-configuration"
+                      sample-file: "default"
+                    - build-dir: "common-custom-user-data-maven-extension"
+                      sample-file: "default"
+                    - build-dir: "common-custom-user-data-maven-extension"
+                      sample-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
+                    - build-dir: "common-custom-user-data-maven-extension"
+                      sample-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
+                    - build-dir: "common-custom-user-data-maven-extension"
+                      sample-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
+                    - build-dir: "common-custom-user-data-maven-extension"
+                      sample-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
 
         steps:
             - name: Checkout
@@ -34,26 +34,26 @@ jobs:
               with:
                   java-version: '11'
                   distribution: 'adopt'
-            - name: Install current version of CCUD Maven extension
+            - name: Publish current snapshot of the CCUD Maven extension to local Maven repository
               run: |
                   mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
-            - name: Use current version of CCUD Maven extension in extension
+            - name: Replace version in build configuration
               run: |
                   sudo apt-get install -y xmlstarlet
-                  # fetching current project version
-                  CURRENT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
-                  # inplace replacement of the snippet version (latest release) with current version (snapshot)
-                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  ${{ matrix.project-basedir }}/.mvn/extensions.xml
-            - name: Copy current sample
+                  # fetching current snapshot version
+                  CURRENT_SNAPSHOT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
+                  # inplace replacement to use snapshot version
+                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_SNAPSHOT_VERSION  ${{ matrix.build-dir }}/.mvn/extensions.xml
+            - name: Prepare build directory
               run: |
                   # default uses the original gradle-enterprise-custom-user-data.groovy
-                  if [[ ${{ matrix.relative-path-to-sample-build-file }} != "default" ]]; then
-                      cp ${{ matrix.relative-path-to-sample-build-file }} ${{ matrix.project-basedir }}/.mvn/gradle-enterprise-custom-user-data.groovy
+                  if [[ ${{ matrix.sample-file }} != "default" ]]; then
+                      cp ${{ matrix.sample-file }} ${{ matrix.build-dir }}/.mvn/gradle-enterprise-custom-user-data.groovy
                   fi
-            - name: Run Maven build using CCUD extension
+            - name: Run Maven build
               run: |
                   echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f ${{ matrix.project-basedir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
+                  mvn -f ${{ matrix.build-dir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
                   echo 'EOF' >> $GITHUB_ENV
             - name: Validate extension loaded
               run: |
