--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -1,66 +1,63 @@
-name: Maven smoke test
+name: Verify Maven Data Capturing Samples
 
-on: [push]
+on: [ push, pull_request, workflow_dispatch ]
 
 jobs:
-
-    verify-maven-samples:
-        runs-on: ubuntu-latest
-
-        env:
-            LOG_MSG_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
-            LOG_MSG_EXECUTION_FAILED: "Error executing a GradleEnterpriseListener callback"
-
-        strategy:
-            matrix:
-                include:
-                    - build-dir: "common-gradle-enterprise-maven-configuration"
-                      sample-file: "default"
-                    - build-dir: "common-custom-user-data-maven-extension"
-                      sample-file: "default"
-                    - build-dir: "common-custom-user-data-maven-extension"
-                      sample-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
-                    - build-dir: "common-custom-user-data-maven-extension"
-                      sample-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
-                    - build-dir: "common-custom-user-data-maven-extension"
-                      sample-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
-                    - build-dir: "common-custom-user-data-maven-extension"
-                      sample-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Set up JDK 11
-              uses: actions/setup-java@v2
-              with:
-                  java-version: '11'
-                  distribution: 'adopt'
-            - name: Publish current snapshot of the CCUD Maven extension to local Maven repository
-              run: |
-                  mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
-            - name: Replace version in build configuration
-              run: |
-                  sudo apt-get install -y xmlstarlet
-                  # fetching current snapshot version
-                  CURRENT_SNAPSHOT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
-                  # inplace replacement to use snapshot version
-                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_SNAPSHOT_VERSION  ${{ matrix.build-dir }}/.mvn/extensions.xml
-            - name: Prepare build directory
-              run: |
-                  # default uses the original gradle-enterprise-custom-user-data.groovy
-                  if [[ ${{ matrix.sample-file }} != "default" ]]; then
-                      cp ${{ matrix.sample-file }} ${{ matrix.build-dir }}/.mvn/gradle-enterprise-custom-user-data.groovy
-                  fi
-            - name: Run Maven build
-              run: |
-                  echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f ${{ matrix.build-dir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
-                  echo 'EOF' >> $GITHUB_ENV
-            - name: Validate extension loaded
-              run: |
-                  # Asserting that extension was loaded checking a log entry
-                  echo $MAVEN_OUTPUT | grep "$LOG_MSG_EXTENSION_LOADED"
-            - name: Validate extension executed
-              run: |
-                  # Asserting that extension was run successfully checking absence of an error log entry
-                  echo $MAVEN_OUTPUT | grep -L "$LOG_MSG_EXECUTION_FAILED"
+  verification:
+    name: Verification of TODO
+    runs-on: ubuntu-latest
+    env:
+      LOG_MSG_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
+      LOG_MSG_EXECUTION_FAILED: "Error executing a GradleEnterpriseListener callback"
+    strategy:
+      matrix:
+        include:
+          - build-dir: "common-gradle-enterprise-maven-configuration"
+            sample-file: "default"
+          - build-dir: "common-custom-user-data-maven-extension"
+            sample-file: "default"
+          - build-dir: "common-custom-user-data-maven-extension"
+            sample-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
+          - build-dir: "common-custom-user-data-maven-extension"
+            sample-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
+          - build-dir: "common-custom-user-data-maven-extension"
+            sample-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
+          - build-dir: "common-custom-user-data-maven-extension"
+            sample-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+            java-version: '11'
+            distribution: 'adopt'
+      - name: Publish current snapshot of the CCUD Maven extension to local Maven repository
+        run: |
+            mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
+      - name: Replace version in build configuration
+        run: |
+            sudo apt-get install -y xmlstarlet
+            # fetching current snapshot version
+            CURRENT_SNAPSHOT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
+            # inplace replacement to use snapshot version
+            xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_SNAPSHOT_VERSION ${{ matrix.build-dir }}/.mvn/extensions.xml
+      - name: Prepare build directory
+        run: |
+            # default uses the original gradle-enterprise-custom-user-data.groovy
+            if [[ ${{ matrix.sample-file }} != "default" ]]; then
+                cp ${{ matrix.sample-file }} ${{ matrix.build-dir }}/.mvn/gradle-enterprise-custom-user-data.groovy
+            fi
+      - name: Run Maven build
+        run: |
+            echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
+            mvn -f ${{ matrix.build-dir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
+            echo 'EOF' >> $GITHUB_ENV
+      - name: Validate extension loaded
+        run: |
+            # Asserting that extension was loaded checking a log entry
+            echo $MAVEN_OUTPUT | grep "$LOG_MSG_EXTENSION_LOADED"
+      - name: Validate extension executed
+        run: |
+            # Asserting that extension was run successfully checking absence of an error log entry
+            echo $MAVEN_OUTPUT | grep -L "$LOG_MSG_EXECUTION_FAILED"
