--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -13,13 +13,13 @@ jobs:
       matrix:
         include:
           - name: 'OS processes'
-            sample-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
+            sample-file: 'build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy'
           - name: 'Quality checks'
-            sample-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
+            sample-file: 'build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy'
           - name: 'Top-level project'
-            sample-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
+            sample-file: 'build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy'
           - name: 'Profiles'
-            sample-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
+            sample-file: 'build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
