--- a/common-gradle-enterprise-maven-configuration/pom.xml
+++ b/common-gradle-enterprise-maven-configuration/pom.xml
@@ -7,9 +7,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Common Gradle Enterprise Maven configuration</name>
+    <url>https://github.com/gradle/gradle-enterprise-build-config-samples/tree/main/common-gradle-enterprise-maven-configuration</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>   
+    </properties>
 
 </project>
