--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -21,8 +21,8 @@ jobs:
             sample-file: 'capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
           - name: 'Test task system properties'
             sample-file: 'capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
-          - name: 'Capture GE Gradle plugin version'
-            sample-file: 'capture-plugin-version/gradle-capture-plugin-version.gradle'
+          - name: 'GE Gradle plugin version'
+            sample-file: 'capture-ge-plugin-version/gradle-ge-plugin-version.gradle'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
