--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -20,7 +20,7 @@ jobs:
             sample-file: 'capture-top-level-project/maven-top-level-project.groovy'
           - name: 'Profiles'
             sample-file: 'capture-profiles/maven-profiles.groovy'
-          - name: 'GE Maven Extension plugin version'
+          - name: 'GE Maven extension version'
             sample-file: 'capture-ge-extension-version/maven-ge-extension-version.groovy'
     steps:
       - name: Checkout
