--- a/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
+++ b/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
@@ -42,6 +42,8 @@ static boolean isM1() {
   return execAndGetStdout("uname", "-p") == "arm"
 }
 
+// On Apple silicon, a universal binary may run either natively or as a translated binary
+// https://developer.apple.com/documentation/apple-silicon/about-the-rosetta-translation-environment#Determine-Whether-Your-App-Is-Running-as-a-Translated-Binary
 static boolean isTranslatedByRosetta() {
   return execAndGetStdout("sysctl", "sysctl.proc_translated") == "sysctl.proc_translated: 1"
 }
